Trade add /ad route with post on create, buy ad and get all ads
