# backend/src/controllers/user-controller.js
@@ -1,10 +1,10 @@
-import bcrypt from 'bcrypt';
+import bcrypt from 'bcryptjs';
 import User from '../models/User';
 import { Errors } from '../utils/constants';
 
-function hidePrivateUserProperties(user){
-    const {username, email, balance} = user;
-    return {username, email, balance}
+function hidePrivateUserProperties(user) {
+    const { username, email, balance } = user;
+    return { username, email, balance }
 }
 async function getUser(props) {
     return User.findOne(props);
@@ -18,14 +18,21 @@ async function saveUser(username, email, password) {
     if (username.includes('@')) {
         throw Errors.UsernameMustNotContainsSobaka;
     }
+
     const passwordHash = await bcrypt.hash(password, Number(process.env.CRYPTO_ITERATIONS));
     return new User({ username, email, passwordHash }).save();
 }
 
 async function updateUserPassword(username, newPasswordHash) {
-    console.log(1234);
-    
     await User.findOneAndUpdate({ username }, { $set: { passwordHash: newPasswordHash } });
+}
+
+async function updateUserBalance(username, balanceChange) {
+    const user = await getUserInfo({ username });
+    if (user.balance + balanceChange < 0) {
+        throw Errors.InsufficientFunds;
+    }
+    await User.findOneAndUpdate({ username }, { $set: { balance: user.balance + balanceChange } });
 }
 
 
@@ -34,5 +41,6 @@ export default {
     getUserInfo,
     hidePrivateUserProperties,
     updateUserPassword,
+    updateUserBalance,
     saveUser,
 };
