# backend/src/routes/user-router.js
@@ -1,5 +1,4 @@
 import express from 'express';
-import { Errors } from '../utils/constants';
 import userController from '../controllers/user-controller';
 import accountController from '../controllers/account-controller';
 
@@ -22,9 +21,19 @@ router.route('/changePassword')
       const { username } = req.user;
       const { oldPassword, newPassword } = req.body;
       const userInfo = await accountController.changeUserPassword({ oldPassword, newPassword, username });
-      console.log(123);
-
       res.status(200).send(userInfo);
+    } catch (err) {
+      next(err);
+    }
+  });
+
+router.route('/balanceUp')
+  .post(async (req, res, next) => {
+    try {
+      const { username } = req.user;
+      const { balanceChange } = req.body;
+      await userController.updateUserBalance(username, balanceChange);
+      res.status(200).send();
     } catch (err) {
       next(err);
     }
